--- a/src/styles/component/_pastillas.scss
+++ b/src/styles/component/_pastillas.scss
@@ -2,9 +2,7 @@
     font-size: 25px;
     font-weight: 500;
     color: var(--p-font-color)
-  }
-
-/* Style the Un-order list by setting its list-style to none */
+}
 .wrapper ul {
   list-style: none;
   display: flex;
@@ -13,9 +11,6 @@
   justify-content: center;
   margin: 1em 0 3em 0;
 }
-
-/* Style the list items inside the UL list, by setting its width, height and line-height and float them to left and set its border and border-radius.
- */
 .wrapper ul li {
   width: 75px;
   height: 75px;
@@ -26,94 +21,355 @@
   border-radius: 50%;
   border: var(--border-wrapper-skills);
   transition: all 0.5s ease;
-  background-color: #f0f8ff;
+  background-color: #ffffffdd;
 }
-
-/* Style the icons by setting its color and margin-top value to 20px 
-to align it properly */
 .wrapper ul li img{
   width:30px;
   margin-bottom: 10px;
-  filter: var(--skills-filter-img);
   opacity: var(--skills-opacity-img);
-  transition: .5s;
-  &:hover{
-      filter: grayscale(0%);
-      opacity: 1;
-      transition: all 0.5s ease;
-  }
+  pointer-events: none;
 }
 
-/* Now target the specific li classes for styling and use box-shadow effect to border and text-shadow effect
-  to icons for glowing effect and use transition property for smooth transition effect. */
-/*facebook*/
-.wrapper ul li:hover.facebook {
-  border: 5px solid #3b5998;
-  box-shadow: 0 0 15px #3b5998;
-  transition: all 0.5s ease;
+/*html*/
+.wrapper ul li:hover.border-html {
+  border: 5px solid #e34f26;
+  box-shadow: 0 0 15px #e34f26;
+  transition: all 0.3s ease;
+}
+.wrapper ul li:hover .icon-html {
+  opacity: 1;
+  transition: all 0.3s ease;
 }
 
-.wrapper ul li:hover .fa-facebook {
-  color: #3b5998;
-  text-shadow: 0 0 15px #3b5998;
-  transition: all 0.5s ease;
+/*css*/
+.wrapper ul li:hover.border-css {
+  border: 5px solid #1b73ba;
+  box-shadow: 0 0 15px #1b73ba;
+  transition: all 0.3s ease;
+}
+.wrapper ul li:hover .icon-css {
+  opacity: 1;
+  transition: all 0.3s ease;
 }
 
-/*twitter*/
-.wrapper ul li:hover.twitter {
-  border: 5px solid #00aced;
-  box-shadow: 0 0 15px #00aced;
-  transition: all 0.5s ease;
+/* javascript */
+.wrapper ul li:hover.border-js {
+  border: 5px solid #e9ca32;
+  box-shadow: 0 0 15px #e9ca32;
+  transition: all 0.3s ease;
+}
+.wrapper ul li:hover .icon-js {
+  opacity: 1;
+  transition: all 0.3s ease;
 }
 
-.wrapper ul li:hover .fa-twitter {
-  color: #00aced;
-  text-shadow: 0 0 15px #00aced;
-  transition: all 0.5s ease;
+/* php */
+.wrapper ul li:hover.border-php {
+  border: 5px solid #8993be;
+  box-shadow: 0 0 15px #8993be;
+  transition: all 0.3s ease;
 }
 
-/* instagram */
-.wrapper ul li:hover.instagram {
-  border: 5px solid #bc2a8d;
-  box-shadow: 0 0 15px #bc2a8d;
-  transition: all 0.5s ease;
+.wrapper ul li:hover .i-php {
+  opacity: 1;
+  transition: all 0.3s ease;
 }
 
-.wrapper ul li:hover .fa-instagram {
-  color: #bc2a8d;
-  text-shadow: 0 0 15px #bc2a8d;
-  transition: all 0.5s ease;
+/* mysql */
+.wrapper ul li:hover.border-mysql {
+  border: 5px solid #0d5d72;
+  box-shadow: 0 0 15px #0d5d72;
+  transition: all 0.3s ease;
 }
 
-/* google */
-.wrapper ul li:hover.google {
-  border: 5px solid #dd4b39;
-  box-shadow: 0 0 15px #dd4b39;
-  transition: all 0.5s ease;
+.wrapper ul li:hover .i-mysql {
+  opacity: 1;
+  transition: all 0.3s ease;
 }
 
-.wrapper ul li:hover .fa-google {
-  color: #dd4b39;
-  text-shadow: 0 0 15px #dd4b39;
-  transition: all 0.5s ease;
+/* laravel */
+.wrapper ul li:hover.border-laravel {
+  border: 5px solid #f95945;
+  box-shadow: 0 0 15px #f95945;
+  transition: all 0.3s ease;
 }
 
-/* whatsapp */
-.wrapper ul li:hover.whatsapp {
-  border: 5px solid #4dc247;
-  box-shadow: 0 0 15px #4dc247;
-  transition: all 0.5s ease;
+.wrapper ul li:hover .i-laravel {
+  opacity: 1;
+  transition: all 0.3s ease;
 }
 
-.wrapper ul li:hover .fa-whatsapp {
-  color: #4dc247;
-  text-shadow: 0 0 15px #4dc247;
-  transition: all 0.5s ease;
+/* firebase */
+.wrapper ul li:hover.border-firebase {
+  border: 5px solid #fcca3f;
+  box-shadow: 0 0 15px #fcca3f;
+  transition: all 0.3s ease;
 }
+
+.wrapper ul li:hover .i-firebase {
+  opacity: 1;
+  transition: all 0.3s ease;
+}
+
+/* react */
+.wrapper ul li:hover.border-react {
+  border: 5px solid #61dafb;
+  box-shadow: 0 0 15px #61dafb;
+  transition: all 0.3s ease;
+}
+.wrapper ul li:hover .i-react {
+  opacity: 1;
+  transition: all 0.3s ease;
+}
+/* bootstrap */
+.wrapper ul li:hover.border-bootstrap {
+  border: 5px solid #7952b3;
+  box-shadow: 0 0 15px #7952b3;
+  transition: all 0.3s ease;
+}
+.wrapper ul li:hover .i-bootstrap {
+  opacity: 1;
+  transition: all 0.3s ease;
+}
+/* sass */
+.wrapper ul li:hover.border-sass {
+  border: 5px solid #cf649a;
+  box-shadow: 0 0 15px #cf649a;
+  transition: all 0.3s ease;
+}
+.wrapper ul li:hover .i-sass {
+  opacity: 1;
+  transition: all 0.3s ease;
+}
+/* jquery */
+.wrapper ul li:hover.border-jquery {
+  border: 5px solid #4f7fac;
+  box-shadow: 0 0 15px #4f7fac;
+  transition: all 0.3s ease;
+}
+.wrapper ul li .i-jquery {
+  width: 45px;
+}
+.wrapper ul li:hover .i-jquery {
+  opacity: 1;
+  transition: all 0.3s ease;
+}
+/* vue */
+.wrapper ul li:hover.border-vue {
+  border: 5px solid #4dba87;
+  box-shadow: 0 0 15px #4dba87;
+  transition: all 0.3s ease;
+}
+.wrapper ul li:hover .i-vue {
+  opacity: 1;
+  transition: all 0.3s ease;
+}
+/* fm */
+.wrapper ul li:hover.border-fm {
+  border: 5px solid #59529d;
+  box-shadow: 0 0 15px #59529d;
+  transition: all 0.3s ease;
+}
+.wrapper ul li:hover .i-fm {
+  opacity: 1;
+  transition: all 0.3s ease;
+}
+/* git */
+.wrapper ul li:hover.border-git {
+  border: 5px solid #de4c36;
+  box-shadow: 0 0 15px #de4c36;
+  transition: all 0.3s ease;
+}
+.wrapper ul li .i-git {
+  width: 35px;
+}
+.wrapper ul li:hover .i-git {
+  opacity: 1;
+  transition: all 0.3s ease;
+}
+/* github */
+.wrapper ul li:hover.border-github {
+  border: 5px solid #161614;
+  box-shadow: 0 0 15px #161614;
+  transition: all 0.3s ease;
+}
+.wrapper ul li:hover .i-github {
+  opacity: 1;
+  transition: all 0.3s ease;
+}
+/* filezilla */
+.wrapper ul li:hover.border-filezilla {
+  border: 5px solid #b50000;
+  box-shadow: 0 0 15px #b50000;
+  transition: all 0.3s ease;
+}
+.wrapper ul li:hover .i-filezilla {
+  opacity: 1;
+  transition: all 0.3s ease;
+}
+/* slack */
+.wrapper ul li:hover.border-slack {
+  border: 5px solid #32ac8a;
+  box-shadow: 0 0 15px #32ac8a;
+  transition: all 0.3s ease;
+}
+.wrapper ul li .i-slack {
+  width: 45px;
+}
+.wrapper ul li:hover .i-slack {
+  opacity: 1;
+  transition: all 0.3s ease;
+}
+/* ph */
+.wrapper ul li:hover.border-ph {
+  border: 5px solid #31a8ff;
+  box-shadow: 0 0 15px #31a8ff;
+  transition: all 0.3s ease;
+}
+.wrapper ul li:hover .i-ph {
+  opacity: 1;
+  transition: all 0.3s ease;
+}
+/* ai */
+.wrapper ul li:hover.border-ai {
+  border: 5px solid #ff9a00;
+  box-shadow: 0 0 15px #ff9a00;
+  transition: all 0.3s ease;
+}
+.wrapper ul li:hover .i-ai {
+  opacity: 1;
+  transition: all 0.3s ease;
+}
+/* pr */
+.wrapper ul li:hover.border-pr {
+  border: 5px solid #99f;
+  box-shadow: 0 0 15px #99f;
+  transition: all 0.3s ease;
+}
+.wrapper ul li:hover .i-pr {
+  opacity: 1;
+  transition: all 0.3s ease;
+}
+/* ae */
+.wrapper ul li:hover.border-ae {
+  border: 5px solid #99f;
+  box-shadow: 0 0 15px #99f;
+  transition: all 0.3s ease;
+}
+.wrapper ul li:hover .i-ae {
+  opacity: 1;
+  transition: all 0.3s ease;
+}
+
+
+.tippy-box[data-theme~='skill-html'] {
+  background-color: #e34f26;
+  color: #ffffff;
+}
+.tippy-box[data-theme~='css'] {
+  background-color: #1b73ba;
+  color: #ffffff;
+}
+.tippy-box[data-theme~='js'] {
+  background-color: #e9ca32;
+  color: #ffffff;
+}
+.tippy-box[data-theme~='php'] {
+  background-color: #8993be;
+  color: #ffffff;
+}
+.tippy-box[data-theme~='mysql'] {
+  background-color: #0d5d72;
+  color: #ffffff;
+}
+.tippy-box[data-theme~='laravel'] {
+  background-color: #f95945;
+  color: #ffffff;
+}
+.tippy-box[data-theme~='firebase'] {
+  background-color: #fcca3f;
+  color: #ffffff;
+}
+.tippy-box[data-theme~='react'] {
+  background-color: #61dafb;
+  color: #ffffff;
+}
+.tippy-box[data-theme~='bootstrap'] {
+  background-color: #7952b3;
+  color: #ffffff;
+}
+.tippy-box[data-theme~='sass'] {
+  background-color: #cf649a;
+  color: #ffffff;
+}
+.tippy-box[data-theme~='jquery'] {
+  background-color: #4f7fac;
+  color: #ffffff;
+}
+.tippy-box[data-theme~='vue'] {
+  background-color: #4dba87;
+  color: #ffffff;
+}
+.tippy-box[data-theme~='fm'] {
+  background-color: #59529d;
+  color: #ffffff;
+}
+.tippy-box[data-theme~='git'] {
+  background-color: #de4c36;
+  color: #ffffff;
+}
+.tippy-box[data-theme~='github'] {
+  background-color: #161614;
+  color: #ffffff;
+}
+.tippy-box[data-theme~='filezilla'] {
+  background-color: #b50000;
+  color: #ffffff;
+}
+.tippy-box[data-theme~='slack'] {
+  background-color: #32ac8a;
+  color: #ffffff;
+}
+.tippy-box[data-theme~='ph'] {
+  background-color: #31a8ff;
+  color: #ffffff;
+}
+.tippy-box[data-theme~='ai'] {
+  background-color: #ff9a00;
+  color: #ffffff;
+}
+.tippy-box[data-theme~='pr'] {
+  background-color: #99f;
+  color: #ffffff;
+}
+.tippy-box[data-theme~='ae'] {
+  background-color: #99f;
+  color: #ffffff;
+}
+
 
 
 /* media queries */
-
+@media screen and (max-width: 1400px){
+  .wrapper ul li{
+      margin-top: 10px;
+  }
+}
+@media screen and (max-width: 1200px){
+  .wrapper ul li{
+      margin-top: 10px;
+  }
+}
+@media screen and (max-width: 992px){
+  .wrapper ul li{
+      margin-top: 10px;
+  }
+}
+@media screen and (max-width: 768px){
+  .wrapper ul li{
+      margin-top: 10px;
+  }
+}
 @media screen and (max-width: 640px){
   .wrapper {
     width: 100%;
@@ -122,8 +378,6 @@ to align it properly */
       margin-top: 10px;
   }
 }
-
-
 @media screen and (max-width: 340px){
   .wrapper {
     width: 150px;
@@ -132,8 +386,3 @@ to align it properly */
       margin:15px;
   }
 }
-
-
-
-
-
